# mcu

./: CMakeLists.txt  get_adc.py  get_telemetry.py  main.c
01-blink/: CMakeLists.txt  main.c
02-control/: CMakeLists.txt  main.c
02-control/led-task/: led-task.c  led-task.h
02-control/protocol-task/: protocol-task.c  protocol-task.h
02-control/stdio-task/: stdio-task.c
02-echo/: CMakeLists.txt  main.c
02-printf/: CMakeLists.txt  main.c
